5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1575_1333.log
== TEST (2019-03-12 11:58:04) 
-- CODE:
expressao = 30-x**y+8//3**y*10
x=3
y=2
print(expressao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    expressao = 30-x**y+8//3**y*10
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:37) 
-- CODE:
expressao =30-3**2

print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:00) 
-- CODE:
expressao =30-3**2+8//3**2*10

print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:59:04) 
-- CODE:
expressao =30-3**2+8//3**2*10

print(expressao)
-- EXECUTION TIME:
0.123306
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
